<resources>
    <string name="app_name">날씨App</string>

    <string name="icon_author">Icon made "Vitaly Gorbachev", "Freepik" from www.flaticon.com</string>
    <string name="data_author">기상청 동네예보, 중기예보 조회서비스 API에서 제공하는 정보를 활용합니다.</string>

    <string name="day0">일</string>
    <string name="day1">월</string>
    <string name="day2">화</string>
    <string name="day3">수</string>
    <string name="day4">목</string>
    <string name="day5">금</string>
    <string name="day6">토</string>
    <string name="no_location_selected">장소를 선택해주세요.</string>
    <string name="day_weather_no_data">지역을 선택해주세요.</string>

    <string name="week_temp"><![CDATA[<font color="#637DFF">%s</font>/<font color="#FF77A9">%s</font>]]></string>
    <string name="week_temp2">%s/%s</string>
</resources>
